# psygames-native

./: .gitignore  APPSTORE_LISTING.md  APP_STORE_PLAN.md  CHANGELOG.md  EAS_BUILD_GUIDE.md  GAMES_REFERENCE.md  GOOGLE_PLAY_LISTING.md  GOOGLE_PLAY_PLAN.md  PSYGAMES_LEVELS_PLAN.md  README.md  ROADMAP.md  anagram_dictionary.md  anagram_dictionary.txt
.claude/: launch.json
.github/scripts/: deploy_play.js  play_status.js
.github/workflows/: build.yml  deploy-android.yml  export-sa.yml  play-status.yml
frontend/: app.json  eas.json  jest-setup.js  package-lock.json  package.json
frontend/app/: +html.tsx  _layout.tsx  achievements.tsx  assessment-result.tsx  index.tsx  onboarding.tsx  pet.tsx  settings.tsx  shop.tsx  statistics.tsx  warmup-bridge.tsx  warmup-complete.tsx  whats-new.tsx
frontend/app/games/: anagrams.tsx  ant.tsx  attention-conflict.tsx  bart.tsx  breathing.tsx  chess-blind.tsx  choice-rt.tsx  cloze.tsx  corsi.tsx  counter.tsx  cpt.tsx  digit-span.tsx  eye-gym.tsx  find-differences.tsx  flanker.tsx  go-no-go.tsx  goods-sort.tsx  (+45 more)
frontend/scripts/: build-anagram-bank.mjs  create-web-route-aliases.mjs  gen-games-deep.mjs  gen-semantic-distractors.mjs  keygen.mjs  smoke-games.mjs
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src-tauri/: Cargo.toml  PrivacyInfo.xcprivacy  build.rs  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+110 files in other folders)
