[package]
name = "psygames"
version = "1.0.0"
description = "PsyGames — cognitive training, native macOS build"
authors = ["Denis Onosov (ODV999)"]
edition = "2021"

[lib]
name = "psygames_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Desktop-only плагины: авто-апдейтер + relaunch. Updater НЕ поддерживает
# Android/iOS (#[cfg(desktop)]) — target-gated, чтобы мобильная сборка не падала.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
